Most of the docouments which is gerrit version v3.1.0 from English to Chinese is Done, except the document begin 'dev-'.